<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_130sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5sdp"
    android:elevation="@dimen/_7sdp"
    app:cardCornerRadius="@dimen/_5sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/medium_gray"
            android:text="Title"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center|left"
            android:paddingLeft="@dimen/_10sdp"
            android:fontFamily="@font/lato_regular"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qualification"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:id="@+id/qualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bachlore"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary_per_month"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:id="@+id/salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$2000"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_vacancies"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:id="@+id/vacancy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 Person"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interested"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:id="@+id/tv_interested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 Agency"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/lato_bold"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/time_ago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2 days ago"
        android:maxLines="1"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/_7sdp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/lato_bold"
        android:layout_marginLeft="@dimen/_5sdp"
        android:textSize="@dimen/_12ssp"/>

</android.support.v7.widget.CardView>
