<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_170sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5sdp"
    android:elevation="@dimen/_9sdp"
    app:cardCornerRadius="@dimen/_5sdp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/medium_gray"
                android:text="Title "
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center|left"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_80sdp"
                android:fontFamily="@font/lato_regular"
                android:maxLines="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qualification"
                    android:textColor="@color/light_gray"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:id="@+id/qualification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salary_per_month"
                    android:textColor="@color/light_gray"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:id="@+id/salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_22sdp"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_vacancies"
                    android:textColor="@color/light_gray"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_13ssp"/>

                <TextView
                    android:id="@+id/vacancy_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"/>
            </LinearLayout>


            <TextView
                android:id="@+id/txt_finish_by"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_23sdp"
                android:text="Finished by"
                android:gravity="center"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/lato_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height=".3dp"
                android:background="@color/light_gray"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:id="@+id/profile_img"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    app:siBorderColor="@color/green"
                    app:siBorderWidth="0.5dp"
                    android:src="@drawable/app_icon"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center|left"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Anil Chourasiya"
                            android:layout_marginLeft="@dimen/_2sdp"
                            android:layout_marginBottom="@dimen/_2sdp"
                            android:layout_marginRight="@dimen/_35sdp"
                            android:textColor="@color/colorPrimaryDark"
                            android:fontFamily="@font/lato_regular"
                            android:maxLines="1"
                            android:textSize="@dimen/_13ssp"/>

                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="+1-9923272634"
                            android:textColor="@color/light_gray"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:maxLines="1"
                            android:fontFamily="@font/lato_regular"
                            android:textSize="@dimen/_11ssp"/>

                    </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_23sdp"

            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_10ssp"
            android:text="20-12-17"
            android:padding="@dimen/_3sdp"
            android:layout_margin="@dimen/_3sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>








</android.support.v7.widget.CardView>
